--- a/API/WebApplication1/WebApplication1/appsettings.json
+++ b/API/WebApplication1/WebApplication1/appsettings.json
@@ -1,4 +1,9 @@
 {
+  {
+    "ConnectionStrings": {
+      "BudgetIt": "localhost;Database=dbserver;Port=5432;Ssl Mode=Require;User Id=postgres;Password=fabs@1"
+    }
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
