--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "chart.js": "^4.4.3",
     "nuxt": "^3.11.2",
     "sass": "^1.77.4",
     "vue": "^3.4.27",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.2",
-    "vuetify": "3.6.0-beta.0.0"
+    "vuetify": "3.6.0"
   }
 }
