feat: Update API endpoint URLs to use production environment
The API endpoint URLs in the code have been updated to use the production environment instead of the local development environment. This ensures that the application is making requests to the correct endpoints in the production environment.

--- a/API/WebApplication1/WebApplication1/Properties/launchSettings.json
+++ b/API/WebApplication1/WebApplication1/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5231",
+      "applicationUrl": "https://webapplication120240607152445.azurewebsites.net/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
