--- a/API/WebApplication1/WebApplication1/appsettings.json
+++ b/API/WebApplication1/WebApplication1/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BudgetIt": "Host=localhost;Database=myDatabase;Username=postgres;Password=fabs@1"
+    "BudgetIt": "Server=tcp:fabsserver.database.windows.net,1433;Initial Catalog=budgetbd;Persist Security Info=False;User ID=fabsdb;Password=Fabs3502@1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
